--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -155,15 +155,15 @@
                 <% if (messages.length === 0) { %>
                     <div class="no-messages">No messages available</div>
                 <% } else { %>
-                    <% messages.forEach(message => { %>
-                        <div class="message">
+                    <% messages.forEach((message, index) => { %>
+                        <div class="message" id="message-<%= index %>">
                             <p><%= message.message %></p>
                             <small><%= message.timeSent %></small>
                             <div class="social-share">
-                                <img src="/images/facebook-icon.png" alt="Share on Facebook" class="social-icon" onclick="shareMessage('<%= username %>', 'facebook')">
-                                <img src="/images/whatsapp-icon.png" alt="Share on WhatsApp" class="social-icon" onclick="shareMessage('<%= username %>', 'whatsapp')">
-                                <img src="/images/twitter-icon.png" alt="Share on Twitter" class="social-icon" onclick="shareMessage('<%= username %>', 'twitter')">
-                                <img src="/images/instagram-icon.png" alt="Share on Instagram" class="social-icon" onclick="shareMessage('<%= username %>', 'instagram')">
+                                <img src="/images/facebook-icon.png" alt="Share on Facebook" class="social-icon" onclick="captureMessage('<%= index %>', 'facebook')">
+                                <img src="/images/whatsapp-icon.png" alt="Share on WhatsApp" class="social-icon" onclick="captureMessage('<%= index %>', 'whatsapp')">
+                                <img src="/images/twitter-icon.png" alt="Share on Twitter" class="social-icon" onclick="captureMessage('<%= index %>', 'twitter')">
+                                <img src="/images/instagram-icon.png" alt="Share on Instagram" class="social-icon" onclick="captureMessage('<%= index %>', 'instagram')">
                             </div>
                         </div>
                     <% }); %>
@@ -179,34 +179,11 @@
         <p>&copy; 2024 Say Ya Mind. All rights reserved.</p>
     </footer>
     <script>
-        function shareMessage(username, platform) {
-            const container = document.getElementById('message-container');
-            html2canvas(container).then(canvas => {
+        function captureMessage(index, platform) {
+            const messageElement = document.getElementById(`message-${index}`);
+            html2canvas(messageElement).then(canvas => {
                 const dataUrl = canvas.toDataURL('image/png');
-                const link = document.createElement('a');
-                link.href = dataUrl;
-                link.download = `${username}-messages.png`;
-
-                // Simulate a click to download the image
-                document.body.appendChild(link);
-                link.click();
-                document.body.removeChild(link);
-
-                // Use the dataUrl as the image for sharing
-                switch (platform) {
-                    case 'facebook':
-                        window.open(`https://www.facebook.com/sharer/sharer.php?u=${dataUrl}`, '_blank');
-                        break;
-                    case 'whatsapp':
-                        window.open(`https://wa.me/?text=${dataUrl}`, '_blank');
-                        break;
-                    case 'twitter':
-                        window.open(`https://twitter.com/share?url=${dataUrl}`, '_blank');
-                        break;
-                    case 'instagram':
-                        window.open(`https://www.instagram.com/?url=${dataUrl}`, '_blank');
-                        break;
-                }
+                window.location.href = `/share?dataUrl=${encodeURIComponent(dataUrl)}&platform=${platform}`;
             });
         }
     </script>
