--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -160,10 +160,14 @@
                             <p><%= message.message %></p>
                             <small><%= message.timeSent %></small>
                             <div class="social-share">
-                                <img src="/images/facebook-icon.png" alt="Share on Facebook" class="social-icon" onclick="captureMessage('<%= index %>', 'facebook')">
-                                <img src="/images/whatsapp-icon.png" alt="Share on WhatsApp" class="social-icon" onclick="captureMessage('<%= index %>', 'whatsapp')">
-                                <img src="/images/twitter-icon.png" alt="Share on Twitter" class="social-icon" onclick="captureMessage('<%= index %>', 'twitter')">
-                                <img src="/images/instagram-icon.png" alt="Share on Instagram" class="social-icon" onclick="captureMessage('<%= index %>', 'instagram')">
+                                <form method="POST" action="/share" target="_blank">
+                                    <input type="hidden" name="platform" id="platform-<%= index %>">
+                                    <input type="hidden" name="dataUrl" id="dataUrl-<%= index %>">
+                                    <img src="/images/facebook-icon.png" alt="Share on Facebook" class="social-icon" onclick="captureMessage('<%= index %>', 'facebook')">
+                                    <img src="/images/whatsapp-icon.png" alt="Share on WhatsApp" class="social-icon" onclick="captureMessage('<%= index %>', 'whatsapp')">
+                                    <img src="/images/twitter-icon.png" alt="Share on Twitter" class="social-icon" onclick="captureMessage('<%= index %>', 'twitter')">
+                                    <img src="/images/instagram-icon.png" alt="Share on Instagram" class="social-icon" onclick="captureMessage('<%= index %>', 'instagram')">
+                                </form>
                             </div>
                         </div>
                     <% }); %>
@@ -183,7 +187,9 @@
             const messageElement = document.getElementById(`message-${index}`);
             html2canvas(messageElement).then(canvas => {
                 const dataUrl = canvas.toDataURL('image/png');
-                window.location.href = `/share?dataUrl=${encodeURIComponent(dataUrl)}&platform=${platform}`;
+                document.getElementById(`dataUrl-${index}`).value = dataUrl;
+                document.getElementById(`platform-${index}`).value = platform;
+                messageElement.querySelector('form').submit();
             });
         }
     </script>
