--- a/views/share.ejs
+++ b/views/share.ejs
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <h1>Share Your Message</h1>
-        <img src="<%= dataUrl %>" alt="Message Image">
+        <img src="<%= imageUrl %>" alt="Message Image">
         <div class="buttons">
             <a href="<%= shareUrl %>" target="_blank">Share on <%= platform %></a>
         </div>
