--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url('https://i.imgur.com/sVe3swt.jpeg'); /* New background image */
+            background-image: url('https://i.imgur.com/sVe3swt.jpeg'); /* Christmas background image */
             background-size: cover;
             background-position: center;
             color: #333;
@@ -36,11 +36,13 @@
             margin-top: 20px;
             border-radius: 10px;
             overflow-y: auto; /* Allows the container to scroll if content overflows */
+            border: 2px solid #ff4500; /* Christmas border color (red) */
         }
 
         .header {
-            text-align: left; /* Align header to the left */
+            text-align: center; /* Center align header */
             margin-bottom: 20px;
+            width: 100%; /* Make header fit the page */
         }
 
         .logo {
@@ -52,7 +54,7 @@
         .header h1 {
             margin: 0;
             font-size: 2.5em; /* Updated font size */
-            color: #FFD700; /* Gold color */
+            color: #32CD32; /* Christmas green color */
             font-family: 'Courier New', Courier, monospace; /* Updated font */
         }
 
@@ -63,7 +65,7 @@
         .messages h2 {
             font-size: 1.5em;
             color: #FFD700; /* Gold color */
-            border-bottom: 2px solid #ddd;
+            border-bottom: 2px solid #ff4500; /* Christmas border color (red) */
             padding-bottom: 5px;
             margin-bottom: 10px;
         }
@@ -83,6 +85,7 @@
             padding: 10px;
             border-radius: 10px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            border: 1px solid #32CD32; /* Christmas border color (green) */
         }
 
         .message p {
