--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url('https://i.imgur.com/sVe3swt.jpeg'); /* Christmas background image */
+            background-image: url('https://i.imgur.com/sVe3swt.jpeg'); /* New background image */
             background-size: cover;
             background-position: center;
             color: #333;
@@ -36,13 +36,12 @@
             margin-top: 20px;
             border-radius: 10px;
             overflow-y: auto; /* Allows the container to scroll if content overflows */
-            border: 2px solid #ff4500; /* Christmas border color (red) */
         }
 
         .header {
-            text-align: center; /* Center align header */
+            text-align: left; /* Align header to the left */
             margin-bottom: 20px;
-            width: 100%; /* Make header fit the page */
+            width: 100%;
         }
 
         .logo {
@@ -53,8 +52,8 @@
 
         .header h1 {
             margin: 0;
-            font-size: 2.5em; /* Updated font size */
-            color: #32CD32; /* Christmas green color */
+            font-size: 2em; /* Reduced font size */
+            color: #FFD700; /* Gold color */
             font-family: 'Courier New', Courier, monospace; /* Updated font */
         }
 
@@ -64,8 +63,8 @@
 
         .messages h2 {
             font-size: 1.5em;
-            color: #FFD700; /* Gold color */
-            border-bottom: 2px solid #ff4500; /* Christmas border color (red) */
+            color: #B22222; /* Festive red color */
+            border-bottom: 2px solid #228B22; /* Festive green border */
             padding-bottom: 5px;
             margin-bottom: 10px;
         }
@@ -85,20 +84,20 @@
             padding: 10px;
             border-radius: 10px;
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            border: 1px solid #32CD32; /* Christmas border color (green) */
+            border: 2px solid #228B22; /* Festive green border */
         }
 
         .message p {
             margin: 0;
             font-size: 1em;
-            color: #555;
+            color: #B22222; /* Festive red color */
         }
 
         .message small {
             display: block;
             margin-top: 5px;
             text-align: right;
-            color: #999;
+            color: #228B22; /* Festive green color */
         }
 
         .social-share {
